# Midi2Qwerty-plus

./: .gitmodules  CMakeLists.txt  README.en.md  README.md
res/: main_layout.ini
res/songs/: Planya.mid
src/: Defines.h  main.cpp  pch.h
src/PianoWindow/: PianoKey.cpp  PianoKey.h  PianoWindow.cpp  PianoWindow.h
src/common/: LogEntry.h  Logger.h  Midi2QWERTY_plus.cpp  Midi2QWERTY_plus.h  Settings.h
src/common/midi/: AsyncMidiPoll.cpp  AsyncMidiPoll.h  Midi.cpp  Midi.h  MidiFileEvent.h  MidiPlayer.cpp  MidiPlayer.h
src/common/utils/: PianoUtils.h
src/windows/CustomTitleBar/: CustomTitleBar.cpp  CustomTitleBar.h
src/windows/LogWindow/: LogEntry.h  LogWindow.cpp  LogWindow.h
src/windows/PianoWindow/: PianoKey.cpp  PianoKey.h  PianoWindow.cpp  PianoWindow.h
src/windows/SettingsWindow/: SettingsWindow.cpp  SettingsWindow.h
src/windows/StatusWindow/: StatusWindow.cpp  StatusWindow.h
